--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Tracker</string>
-    <string name="title_activity_master">Main Window</string>
+    <string name="title_activity_master">Home</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -10,6 +10,7 @@
     <string name="balance">Balance</string>
     <string name="amount">20,000.000 KZT</string>
     <string name="transaction">Transaction</string>
+    <string name="today">Today</string>
     <string name="take_a_photo">Take a Photo</string>
     <string name="preview_of_image">preview of image</string>
     <string-array name="transactions">
